--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12 p-2">
                <div>
                 <h3 class="enterAge">Enter Your Age to Check:</h3> <br>
-                <input  onInput="ageCheck()" id="age" type="number" class="form-control"> <br>
+                <input  onInput="ageCheck()" id="age" type="number" class="form-control" placeholder="Type your Age"> <br>
                 <!-- <button class="btn newBooksButton" type="button"> Check Age</button> -->
                </div>
                
